# newton-cli

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  pyproject.toml
logs/: SESSION_SUMMARY.md  round2_summary.md  round3_summary.md  wave_a.md  wave_b.md  wave_c.md  wave_d.md  wave_e.md  wave_f.md  给外行人看的总结.md
prompts/: cli_anything_bootstrap.md
src/newton_cli/: __init__.py  __main__.py  _introspect.py  _warp.py  cli.py  io.py  recipes.py  render.py  sim.py  state_io.py
tests/: _cli.py  test_phase0_introspection.py  test_run_script.py
tests/test_examples/: test_basic_heightfield.py  test_basic_joints.py  test_basic_pendulum.py  test_basic_shapes.py  test_basic_urdf.py  test_robot_anymal_d.py  test_robot_cartpole.py  test_robot_g1.py  test_softbody_hanging.py
tests/test_examples/_shared/: b_route_runner.py  prep_asset.py  visualize.py
tests/test_examples/basic_conveyor/: run.ps1  script.py
tests/test_examples/basic_heightfield/: README.md  prep.py  recipe.json  run.ps1
tests/test_examples/basic_joints/: README.md  recipe.json  run.ps1
tests/test_examples/basic_pendulum/: README.md  recipe.json  run.ps1
tests/test_examples/basic_plotting/: README.md  prep.py  recipe.json  run.ps1
tests/test_examples/basic_shapes/: README.md  recipe.json  run.ps1
tests/test_examples/basic_urdf/: README.md  prep.py  recipe.json  run.ps1
tests/test_examples/basic_viewer/: run.ps1
tests/test_examples/brick_stacking/: run.ps1
tests/test_examples/cable_bundle_hysteresis/: run.ps1
tests/test_examples/ik_h1/: run.ps1
(+89 files in other folders)
